# arcane_physics_2d

./: Cargo.toml  LICENSE  README.md  shell.nix
src/: body.rs  collision.rs  draw.rs  lib.rs  main.rs  math.rs  world.rs
src/body/: body_circle.rs  body_polygon.rs  body_rectangle.rs  circle.rs  collision.rs  components.rs  polygon.rs  shapes.rs
src/body/shapes/: circle.rs  polygon.rs  rectangle.rs
src/geometry/: collider.rs  collision.rs  mod.rs  shape.rs
src/geometry/shape/: circle.rs  convex_polygon.rs
src/math/: mod.rs
src/old/: body.rs  math.rs  physics.rs
src/physics/: rigid_body.rs
src/player/: mod.rs
src/plugin/: mod.rs
src/render/: mod.rs
