[package]
name = "arcane_physics_2d"
authors = ["ToppDev"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
enum-as-inner = "0.5"
macroquad = "0.3"
nalgebra = "0.32"
itertools = "0.10"

[dev-dependencies]
pretty_assertions = "1"
assert_approx_eq = "1.1"
